--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,10 +1,10 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import BasePage from "./BasePage.astro";
+import { getImage } from "astro:assets"
 
 type Props = CollectionEntry<"blog">["data"];
 
@@ -12,7 +12,14 @@ const { title, description, pubDate, updatedDate, heroImage, author } =
 	Astro.props;
 
 const images = import.meta.glob("../images/**");
-const heroImageImport = await images[`../images/${heroImage}`]()
+const heroImageImport: any = await images[`../images/${heroImage}`]()
+
+const loadedImage = await getImage({
+    src: heroImageImport.default,
+    format: "webp",
+    width: 720,
+    height: 720,
+});
 
 ---
 
@@ -24,13 +31,13 @@ const heroImageImport = await images[`../images/${heroImage}`]()
 				<div class="hero-image">
 					{
 						heroImage && (
-							<img src={heroImageImport.default.src} alt="" class="mb-16 mx-auto aspect-square" />
+							<img src={loadedImage.src} alt="" class="mb-16 mx-auto aspect-square" />
 						)
 					}
 				</div>
 				<div>
-					<h1 class="text-5xl font-bold">{title}</h1>
-					<h2 class="text-lg font-medium text-neutral-focus mt-4">
+					<h1 class="text-4xl font-bold">{title}</h1>
+					<h2 class="text-lg font-medium text-secondary mt-4">
 						{description}
 					</h2>
 					<div class="text-primary mt-8">
