--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import headshot from "../images/strauss.webp"
 						Saint Louis, Missouri born and raised, I study <span class="text-primary">Computer Sciences</span> at the <span class="text-secondary">University of Wisconsin-Madison</span>. I'm passionate about Software Development, Machine Learning, and
 						Technology Policy.
 					</p>
-					<div class="flex flex-col md:flex-row justify-around sm:gap-10 mx-auto text-3xl mb-16">
+					<div class="flex flex-col md:flex-row justify-around sm:gap-10 mx-auto text-3xl mb-16 z-0">
 						{
 							links.map((val) => (
 								<a
