--- a/src/layouts/BasePage.astro
+++ b/src/layouts/BasePage.astro
@@ -3,12 +3,21 @@ import BaseHead from "../components/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import "@fontsource-variable/roboto-mono";
 import "@fontsource-variable/manrope";
+import "@fontsource-variable/source-serif-4";
+import Footer from "../components/Footer.astro"
 ---
 
 <!doctype html>
-<html data-theme="night" lang="en" class="min-h-full h-100 subpixel-antialiased">
+<html data-theme="night" lang="en" class="font-serif min-h-full h-100 subpixel-antialiased">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-    <slot/>
+	<body>
+    	<main>
+			<slot/>
+		</main>
+	</body>
+
+	<!-- Footer -->
+	<Footer havePhotoCredits={false}/>
 </html>
