playing around with styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,15 +23,15 @@ import CustomLink from "../components/CustomLink.astro"
 		</ul>
 		<h2 class="text-3xl my-2">Socials</h2>
 		<div class="flex flex-row items-center justify-center gap-x-2">
-			<button class="btn">
+			<button class="btn btn-link btn-lg text-neutral-content">
 				<Icon name="linkedin"></Icon>
 				LinkedIn
 			</button>
-			<button class="btn">
+			<button class="btn btn-link btn-lg text-neutral-content">
 				<Icon name="github"></Icon>
 				Github
 			</button>
-			<button class="btn">
+			<button class="btn btn-link btn-lg text-neutral-content">
 				<Icon name="mail"></Icon>
 				Email
 			</button>
