--- a/src/layouts/BasePage.astro
+++ b/src/layouts/BasePage.astro
@@ -1,23 +1,20 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-import "@fontsource-variable/roboto-mono";
-import "@fontsource-variable/manrope";
-import "@fontsource-variable/source-serif-4";
 import Footer from "../components/Footer.astro"
 ---
 
 <!doctype html>
-<html data-theme="night" lang="en" class="font-serif min-h-full h-100 subpixel-antialiased">
+<html lang="en" class="font-serif min-h-full h-100 subpixel-antialiased bg-background text-text">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body class="">
     	<main>
 			<slot/>
 		</main>
 	</body>
 
 	<!-- Footer -->
-	<Footer havePhotoCredits={false}/>
+	<Footer/>
 </html>
