--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,7 +1,5 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import BasePage from "./BasePage.astro";
 import { getImage } from "astro:assets"
@@ -11,53 +9,40 @@ type Props = CollectionEntry<"blog">["data"];
 const { title, description, pubDate, updatedDate, heroImage, author } =
 	Astro.props;
 
-const images = import.meta.glob("../images/**");
-const heroImageImport: any = await images[`../images/${heroImage}`]()
+// const images = import.meta.glob("../images/**");
+// const heroImageImport: any = await images[`../images/${heroImage}`]()
 
-const loadedImage = await getImage({
-    src: heroImageImport.default,
-    format: "webp",
-    width: 720,
-    height: 720,
-});
+// const loadedImage = await getImage({
+//     src: heroImageImport.default,
+//     format: "webp",
+//     width: 720,
+//     height: 720,
+// });
 
 ---
 
 <BasePage>
-	<body>
-		<Header />
-		<main class="my-16 md:w-[720px] max-md:p-2 mx-auto">
-			<article>
-				<div class="hero-image">
-					{
-						heroImage && (
-							<img src={loadedImage.src} alt="" class="mb-16 mx-auto aspect-square" />
-						)
-					}
-				</div>
-				<div>
-					<h1 class="text-4xl font-bold">{title}</h1>
-					<h2 class="text-lg font-medium text-secondary mt-4">
-						{description}
-					</h2>
-					<div class="text-primary mt-8">
-						Published <FormattedDate date={pubDate} />
-						{
-							updatedDate && (
-								<div>
-									Last updated on <FormattedDate date={updatedDate} />
-								</div>
-							)
-						}
-						<div class="text-secondary">{author}</div>
-					</div>
-					<hr class="my-8" />
-					<div class="prose">
-						<slot />
-					</div>
-				</div>
-			</article>
-		</main>
-		<Footer />
-	</body>
+	<article class="sm:mt-20 block mx-auto w-[700px] text-wrap">
+		<div>
+			<h1 class="text-4xl font-semibold">{title}</h1>
+			<h2 class="text-lg font-medium mt-4">
+				{description}
+			</h2>
+			<div class="text-primary mt-8">
+				Published <FormattedDate date={pubDate} />
+				{
+					updatedDate && (
+						<div>
+							Last updated on <FormattedDate date={updatedDate} />
+						</div>
+					)
+				}
+				<div class="f">{author}</div>
+			</div>
+			<hr class="my-8" />
+			<div class="prose max-w-none">
+				<slot />
+			</div>
+		</div>
+	</article>
 </BasePage>
