--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,3 +11,7 @@
     background-size: 200% 100%;
     background-position: 100% 100%;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
