more course stuff

--- a/src/layouts/BasePage.astro
+++ b/src/layouts/BasePage.astro
@@ -5,7 +5,7 @@ import Footer from "../components/Footer.astro"
 ---
 
 <!doctype html>
-<html lang="en" class="font-serif min-h-full h-100 subpixel-antialiased bg-background text-text">
+<html lang="en" class="font-serif min-h-full h-100 bg-background text-text">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
