--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,38 +6,37 @@ import { getCollection } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 
 const posts = (await getCollection("blog")).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf(),
+	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 
 const subheaderStyles = "text-2xl sm:text-4xl mb-4 sm:mt-12 mt-6";
 const buttonStyles =
-	"btn btn-link btn-lg normal-case font-normal no-underline text-accent";
+	"btn btn-link btn-lg normal-case font-normal no-underline text-text hover:scale-105 duration-100";
 ---
 
 <BasePage>
-	<div
-		class="sm:mt-20 block mx-auto max-w-[700px] text-wrap sm:text-lg"
-	>
+	<div class="sm:mt-20 block mx-auto max-w-[700px] text-wrap sm:text-lg">
 		<h1 class="text-4xl sm:text-5xl my-4 font-semibold">Sam Baumohl</h1>
 		<p class="mb-1">
-			I am a student at the <span class="text-accent"
-				>University of Wisconsin-Madison</span
-			> studying
-			<span class="text-primary-400">Computer Sciences</span> and <span
-				class="text-success">Mathematics</span
-			>. I'm interested in software development, machine learning/AI, and
-			technology policy. I like to read, solve problems, and work on
-			various side projects, some of which I'll post here. Right now, I'm:
+			I am a student at the University of Wisconsin-Madison studying
+			Computer Sciences and Mathematics. I'm interested in software
+			development, machine learning/AI, and technology policy. I like to
+			read, solve problems, and work on various side projects, some of
+			which I'll post here. Right now, I'm:
 		</p>
 		<ul class="ml-1 list-disc list-inside">
-			<li>&nbsp;trying to survive the CS major</li>
+			<li>
+				trying to survive the <a
+					class="underline"
+					href="/blog/uw-madison-courses/">CS major</a>
+			</li>
 			<li>
 				a Coordinator at Madison's&nbsp;<CustomLink
 					href="https://www.upl.cs.wisc.edu/"
 					>Undergraduate Project Lab</CustomLink
 				>
 				<li>
-					an active member of the&nbsp;<CustomLink
+					a passionate member of the&nbsp;<CustomLink
 						href="https://waisi.org/"
 						>Wisconsin AI Safety Initiative (WAISI)</CustomLink
 					>
@@ -51,9 +50,7 @@ const buttonStyles =
 			</li>
 		</ul>
 		<h2 class={subheaderStyles}>Socials</h2>
-		<div
-			class="flex flex-row items-center justify-center gap-x-2"
-		>
+		<div class="flex flex-row items-center justify-center gap-x-2">
 			<form action="https://www.linkedin.com/in/sam-baumohl09/">
 				<button class={buttonStyles}>
 					<Icon name="linkedin" />
@@ -77,7 +74,7 @@ const buttonStyles =
 				posts.reverse().map((post, _) => (
 					<a href={`/blog/${post.slug}/`}>
 						{/* border-solid border-accent border */}
-						<div class="bg-primary-800 flex flex-col md:flex-row gap-6  p-3 hover:scale-105 duration-100 shadow-2xl">
+						<div class="bg-primary flex flex-col md:flex-row gap-6  p-3 hover:scale-105 duration-100 shadow-2xl rounded">
 							<div class="flex flex-col">
 								<h4 class="font-semibold text-xl">
 									{post.data.title}
@@ -104,11 +101,7 @@ const buttonStyles =
 			>
 		</form>
 		<h3 class="text-lg font-bold">Email Address</h3>
-		<p class="py-4">
-			<span class="text-primary-400">sam</span> (at) <span class="text-info"
-				>baumohl</span
-			> (dot) <span class="text-accent">dev</span>
-		</p>
+		<p class="py-4">sam (at) baumohl (dot) dev</p>
 	</div>
 	<form method="dialog" class="modal-backdrop">
 		<button>close</button>
