--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { NAME } from "../consts";
 const today = new Date();
 ---
 
-<footer class="bg-secondary-800 text-text text-lg font-semibold mt-4 px-1 py-4 text-center">
+<footer class="bg-primary text-text text-lg font-semibold mt-4 px-1 py-4 text-center">
 	&copy; {today.getFullYear()}
 	{" " + NAME}. All rights reserved.
 </footer>
