--- a/src/layouts/BasePage.astro
+++ b/src/layouts/BasePage.astro
@@ -2,6 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import Footer from "../components/Footer.astro"
+import "@fontsource-variable/source-serif-4";
 ---
 
 <!doctype html>
