saving dark/light theme work

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -39,21 +39,23 @@ const { title, description } = Astro.props;
 	href="/favicons/favicon-16x16.png"
 />
 
+<script defer src="/scripts/theme-toggle.js"/>
+
 <!-- Font preloads -->
-<link
-	rel="preload"
-	href="/fonts/atkinson-regular.woff"
-	as="font"
-	type="font/woff"
-	crossorigin
-/>
-<link
-	rel="preload"
-	href="/fonts/atkinson-bold.woff"
-	as="font"
-	type="font/woff"
-	crossorigin
-/>
+<!-- <link -->
+<!-- 	rel="preload" -->
+<!-- 	href="/fonts/atkinson-regular.woff" -->
+<!-- 	as="font" -->
+<!-- 	type="font/woff" -->
+<!-- 	crossorigin -->
+<!-- /> -->
+<!-- <link -->
+<!-- 	rel="preload" -->
+<!-- 	href="/fonts/atkinson-bold.woff" -->
+<!-- 	as="font" -->
+<!-- 	type="font/woff" -->
+<!-- 	crossorigin -->
+<!-- /> -->
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
