--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,15 +3,8 @@ import HeaderLink from "./HeaderLink.astro";
 
 const { href, class: className, isFixed, ...props } = Astro.props;
 ---
-
-<div class:list={[className, "px-2 py-5 lg:px-36 md:px-20 bg-base-100 w-screen z-10", isFixed && "md:fixed"]} {...props}>
+<div>
 	<header>
-		<nav>
-			<div class="flex flex-row max-sm:justify-center gap-8 text-3xl">
-				<HeaderLink class="fancy-hover p-1 sm:px-4" href="/">Home</HeaderLink>
-				<HeaderLink class="fancy-hover p-1 sm:px-4" href="/blog">Blog</HeaderLink>
-				<HeaderLink class="fancy-hover p-1 sm:px-4" href="/pgp">PGP</HeaderLink>
-			</div>
-		</nav>
+		<input type="checkbox" class="toggle toggle-md" checked="checked" id="theme-toggle"/>
 	</header>
 </div>
