--- a/src/layouts/BasePage.astro
+++ b/src/layouts/BasePage.astro
@@ -1,21 +1,24 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-import Footer from "../components/Footer.astro"
+import Footer from "../components/Footer.astro";
 import "@fontsource-variable/source-serif-4";
 ---
 
 <!doctype html>
-<html lang="en" class="font-serif min-h-full h-100 bg-background text-text">
+<html lang="en" class="font-serif min-h-full h-100 bg-bright">
+
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="">
-    	<main>
-			<slot/>
+	<body class="text-darker bg-bright dark:text-bright dark:bg-darker">
+		<!-- <Header/> -->
+		<main>
+			<slot />
 		</main>
 	</body>
-
+	
 	<!-- Footer -->
-	<Footer/>
+	<Footer />
 </html>
