redesign done or now

--- a/src/layouts/BasePage.astro
+++ b/src/layouts/BasePage.astro
@@ -7,12 +7,12 @@ import "@fontsource-variable/source-serif-4";
 ---
 
 <!doctype html>
-<html lang="en" class="font-serif min-h-full h-100 bg-bright">
+<html lang="en" class="font-serif min-h-full h-100">
 
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="text-darker bg-bright dark:text-bright dark:bg-darker">
+	<body class="">
 		<!-- <Header/> -->
 		<main>
 			<slot />
