--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,22 +10,22 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 ---
 
 <BasePage>
-	<article class="sm:mt-20 block mx-auto w-[700px] text-wrap mb-8">
+	<div class="sm:mt-20 mx-auto max-w-[700px] text-wrap mb-8">
 		<a
 			href="../"
-			class="w-50 text-lg text-text-400 hover:text-text normal-case font-normal hover:underline no-underline"
+			class="w-50 sm:text-lg text-text-400 hover:text-text normal-case font-normal hover:underline no-underline"
 			><Icon
 				name="angles-left-solid"
 				class="inline-block text-sm mb-1"
 			/>Back</a
 		>
-		<div>
-			<h1 class="text-4xl font-semibold">{title}</h1>
-			<h2 class="text-lg font-semibold mt-4">
+		<div class="p-1">
+			<h1 class="text-xl sm:text-4xl font-semibold">{title}</h1>
+			<h2 class="sm:text-lg font-semibold mt-4">
 				{description}
 			</h2>
-			<hr class="mt-8 mb-2 border-darker dark:border-bright" />
-			<div class="text-lg mb-6 flex flex-row gap-x-2">
+			<hr class="mt-1 mb-2 border-black" />
+			<div class="sm:text-lg mb-6 flex flex-row gap-x-2">
 				<span>Published on<FormattedDate date={pubDate} /></span
 				>&middot;
 				{
@@ -41,11 +41,11 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 				}
 				<span>{author}</span>
 			</div>
-			<div
-				class="prose prose-custom prose-lg dark:prose-invert max-w-none"
+			<article
+				class="prose prose-neutral prose-sm sm:prose-base max-w-none text-wrap"
 			>
 				<slot />
-			</div>
+			</article>
 		</div>
-	</article>
+	</div>
 </BasePage>
