--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -12,7 +12,7 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 <BasePage>
 	<div class="sm:mt-20 mx-auto max-w-[700px] text-wrap mb-8">
 		<a
-			href="../"
+			href="/"
 			class="w-50 sm:text-lg text-text-400 hover:text-text normal-case font-normal hover:underline no-underline"
 			><Icon
 				name="angles-left-solid"
