--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,63 +1,51 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import BasePage from "./BasePage.astro";
-import { getImage } from "astro:assets"
+import { Icon } from "astro-icon/components";
 
 type Props = CollectionEntry<"blog">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage, author } =
-	Astro.props;
-
-const images = import.meta.glob("../images/**");
-const heroImageImport: any = await images[`../images/${heroImage}`]()
-
-const loadedImage = await getImage({
-    src: heroImageImport.default,
-    format: "webp",
-    width: 720,
-    height: 720,
-});
-
+const { title, description, pubDate, updatedDate, author } = Astro.props;
 ---
 
 <BasePage>
-	<body>
-		<Header />
-		<main class="my-16 md:w-[720px] max-md:p-2 mx-auto">
-			<article>
-				<div class="hero-image">
-					{
-						heroImage && (
-							<img src={loadedImage.src} alt="" class="mb-16 mx-auto aspect-square" />
-						)
-					}
-				</div>
-				<div>
-					<h1 class="text-4xl font-bold">{title}</h1>
-					<h2 class="text-lg font-medium text-secondary mt-4">
-						{description}
-					</h2>
-					<div class="text-primary mt-8">
-						Published <FormattedDate date={pubDate} />
-						{
-							updatedDate && (
-								<div>
-									Last updated on <FormattedDate date={updatedDate} />
-								</div>
-							)
-						}
-						<div class="text-secondary">{author}</div>
-					</div>
-					<hr class="my-8" />
-					<div class="prose">
-						<slot />
-					</div>
-				</div>
+	<div class="sm:mt-20 mx-auto max-w-[700px] text-wrap mb-8">
+		<a
+			href="../"
+			class="w-50 sm:text-lg text-text-400 hover:text-text normal-case font-normal hover:underline no-underline"
+			><Icon
+				name="angles-left-solid"
+				class="inline-block text-sm mb-1"
+			/>Back</a
+		>
+		<div class="p-1">
+			<h1 class="text-xl sm:text-4xl font-semibold">{title}</h1>
+			<h2 class="sm:text-lg font-semibold mt-4">
+				{description}
+			</h2>
+			<hr class="mt-1 mb-2 border-black" />
+			<div class="sm:text-lg mb-6 flex flex-row gap-x-2">
+				<span>Published on<FormattedDate date={pubDate} /></span
+				>&middot;
+				{
+					updatedDate && (
+						<>
+							<span>
+								Last updated on{" "}
+								<FormattedDate date={updatedDate} />
+							</span>
+							<span>&middot;</span>
+						</>
+					)
+				}
+				<span>{author}</span>
+			</div>
+			<article
+				class="prose prose-neutral prose-sm sm:prose-base max-w-none text-wrap"
+			>
+				<slot />
 			</article>
-		</main>
-		<Footer />
-	</body>
+		</div>
+	</div>
 </BasePage>
