--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,12 +2,16 @@
     background-image: linear-gradient(hsl(var(--sf)) 0 0);
     background-repeat: no-repeat;
     background-size: 200% .08em;
-      background-position: 200% 100%;
+    background-position: 200% 100%;
     transition: background-size .2s, background-position .2s .2s;
 }
 
 .fancy-hover:hover {
     transition: background-size .2s .2s, background-position .2s;
     background-size: 200% 100%;
-      background-position: 100% 100%;
+    background-position: 100% 100%;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
